@@ -298,7 +298,7 @@ void sftp_ExaminePacket(RPC2_PacketBuffer *pb)
     /* Client records SFTP port here since we may need to use it before we record other parms. */
     if (sfp->GotParms == FALSE && sfp->WhoAmI == SFCLIENT)
     {
-	sfp->PeerPort = pb->Prefix.PeerPort;	/* structure assignment */
+	sfp->Masqueraded = 1;			/* Does this really help? */
 	sfp->HostInfo = ce->HostInfo;		/* Set up host/port linkage. */
 
 	/* Can't set GotParms to TRUE yet; must pluck off other parms. */
@@ -446,7 +446,7 @@ static void SFSendNAK(RPC2_PacketBuffer *pb)
     /* XXX hack so we can use sftp_XmitPacket */
     fake_se.PInfo.RemoteHost = *whichHost;
     fake_se.PInfo.RemotePort = *whichPort;
-    fake_se.PeerPort.Tag = 0;
+    fake_se.Masqueraded = 1;
 
     sftp_XmitPacket(&fake_se, nakpb);    /* ignore return code */
     SFTP_FreeBuffer(&nakpb);
