@@ -73,7 +73,6 @@ struct CBUF_Header *TraceBuf;
 int sftp_XmitPacket(struct SFTP_Entry *sEntry, RPC2_PacketBuffer *pb)
 {
     int whichSocket;
-    RPC2_PortIdent *whichPort;
 #ifdef RPC2DEBUG
     struct TraceEntry *te;
 
@@ -83,17 +82,14 @@ int sftp_XmitPacket(struct SFTP_Entry *sEntry, RPC2_PacketBuffer *pb)
 #endif
 
     whichSocket = sftp_Socket;
-    whichPort = &sEntry->PeerPort;
 
     /* when either side is in `masquerading mode', send the packet out
      * of the rpc2 socket */
-    if (!sftp_Port.Tag || !sEntry->PeerPort.Tag)
-    {
+    if (!sftp_Port.Tag || !sEntry->Masqueraded)
         whichSocket = rpc2_RequestSocket;
-        whichPort = &sEntry->PInfo.RemotePort;
-    }
 
-    rpc2_XmitPacket(whichSocket, pb, &sEntry->PInfo.RemoteHost, whichPort);
+    rpc2_XmitPacket(whichSocket, pb,
+		    &sEntry->PInfo.RemoteHost, &sEntry->PInfo.RemotePort);
 
     if (ntohl(pb->Header.Flags) & RPC2_MULTICAST) {
 	rpc2_MSent.Total--;
